[package]
name = "rustris"
authors = ["Alex Haslehurst"]
version = "1.2.0"
edition = "2021"
resolver = "2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2024.04.26"
dependencies = ["sdl2", "sdl2-image", "sdl2-gfx", "sdl2-mixer", "sdl2-ttf"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[features]
default = ["pkgconfig"]
vcpkg = ["sdl2/static-link", "sdl2/use-vcpkg"]
pkgconfig = ["sdl2/use-pkgconfig"]
retro_handheld = []

[build-dependencies]
built = { version = "0.7.5", default-features = false, features = [] }
embed-resource = "3.0.1"

[dependencies]
rand = "0.9.1"
rand_chacha = "0.9.0"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
bitflags = "2.6.0"
sdl2 = { version = "0.37.0", default-features = false, features = ["image","gfx","mixer","ttf"] }
confy = { version = "0.6.1", default-features = false, features = ["yaml_conf"] }
num-format = "0.4.4"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
rayon = "1.10.0"
itertools = "0.14.0"

[profile.release]
strip = "symbols"